--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
+
+/* CSS for the link underline animation */
+.link-underline {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 2px; /* Height of the underline */
+  background-color: #efe6e6; /* Color of the underline */
+  transition: width 0.5s ease-in-out;
+}
+
+.sidebar-link {
+  position: relative;
+  text-decoration: none;
+  color: white;
+  transition: color 0.3s;
+}
+
+.sidebar-link:hover .link-underline {
+  width: 100%; /* Expand the underline to 100% on hover */
+}
